# pixelizer

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
nginx/: nginx.conf
scheme_registry/: scheme_v1.proto
service/: Dockerfile  Makefile  go.mod  go.sum  pyproject.toml
service/cmd/: main.go
service/internal/app/: app.go
service/internal/config/: config.go
service/internal/image/: models.go  pixelizer.go  repository.go  service.go
service/internal/pixelizer/: service.go
service/internal/transport/frontend/: frontend.go  server.go
service/internal/user/: model.go  repository.go  service.go
service/pixelizer/: main.py
service/pixelizer/core/: config.py  env_type.py  logger.py
service/pixelizer/models/: image.py  subscription.py  user.py
service/pixelizer/routers/: health.py
service/pixelizer/routers/v1/: image.py  login.py  subscription.py  user.py
service/pixelizer/routers/v1/utils/: params.py
service/pixelizer/schemas/: image.py  user.py
service/pkg/kafkaWriter/: kafkaWriter.go
service/static/: index.html
traefik/: traefik.yml
worker/: Dockerfile  pyproject.toml
worker/app/: main.py  pixelize.py
