[tool.poetry]
name = "pixelizer"
version = "1.0"
description = "Pixelizer and remember some image"
authors = ["nifle3 <kuper116rus.2005@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
