[tool.poetry]
name = "pixelizer-service"
package-mode = false
version = "0.1.0"
description = ""
authors = ["nifle3 <kuper116rus.2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
redis = {extras = ["hiredis"], version = "^5.0.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
